# todo-list-api-rs

./: Cargo.toml  README.md
src/: controllers.rs  main.rs
src/application/: get_all_tasks.rs  mod.rs  task_repository.rs  task_service.rs
src/application/commands/: add_task.rs  create_task_with_description.rs  mod.rs  update_task.rs
src/application/queries/: get_all_tasks.rs  get_task_by_id.rs  mod.rs
src/controllers/: add_task.rs  get_task.rs  get_tasks.rs  mod.rs  update_task.rs
src/domain/: mod.rs  task.rs
src/infrastructure/: dynamodb_task_respoitory.rs  in_memory_task_repository.rs  mod.rs
