[package]
name = "todo-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.1", features = ["v4", "fast-rng", "serde"] }
actix = "0.13"
actix-web = "4.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
