[package]
name = "todo-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1"
anyhow = "1.0"
async-trait = "0.1"
aws-config = "0.49"
aws-sdk-dynamodb = "0.19"
env_logger = "0.9"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_dynamo = { version = "4.0", features = ["aws-sdk-dynamodb+0_19"] }
uuid = { version = "1.1", features = ["v4", "fast-rng", "serde"] }
